fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Comments_from_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_Attendees__c</fullName>
    <label>Comments from Attendees</label>
    <type>TextArea</type>
</CustomField>