fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/CommentsforFollowUpTraining__c.field-meta.xml
<CustomField>
    <fullName>CommentsforFollowUpTraining__c</fullName>
    <label>Comments for Follow-Up Training</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>