fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/ContactTitle__c.field-meta.xml
<CustomField>
    <fullName>ContactTitle__c</fullName>
    <formula>Contact_Name__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Title</label>
    <type>Text</type>
</CustomField>