fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Contractor_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Departure_Time__c</fullName>
    <label>Contractor Departure Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>