fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/ContractorExpenses__c.field-meta.xml
<CustomField>
    <fullName>ContractorExpenses__c</fullName>
    <label>Contractor Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>