fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/ContractorHoursRequested2__c.field-meta.xml
<CustomField>
    <fullName>ContractorHoursRequested2__c</fullName>
    <inlineHelpText>Example:
9/5/19: 8-5 PM - 8 hours
9/6/19: 8-12 PM - 4 hours</inlineHelpText>
    <label>Contractor Hours Requested 2:</label>
    <type>TextArea</type>
</CustomField>