fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/ContractorHoursRequested_del__c.field-meta.xml
<CustomField>
    <fullName>ContractorHoursRequested_del__c</fullName>
    <inlineHelpText>Example:
9/5/19: 8-5 PM - 8 hours
9/6/19: 8-12 PM - 4 hours</inlineHelpText>
    <label>Contractor Hours Requested 1:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>