fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Copy_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Copy_RecordType__c</fullName>
    <label>Copy: RecordType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Education Program Request</fullName>
            </value>
            <value>
                <fullName>CMA Speaker Request</fullName>
            </value>
            <value>
                <fullName>CMA Procedural Lab</fullName>
            </value>
            <value>
                <fullName>Live Education Program Request</fullName>
            </value>
            <value>
                <fullName>Online Education Program Request</fullName>
            </value>
            <value>
                <fullName>Strategic Vascular Education Programs</fullName>
            </value>
            <value>
                <fullName>Inservice Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>