fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Cost_per_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Attendee__c</fullName>
    <formula>IF( Total_Attendees__c &lt;1,0, Grand_Total__c  /Total_Attendees__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Attendee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>