fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Count_CRF__c.field-meta.xml
<CustomField>
    <fullName>Count_CRF__c</fullName>
    <label>Count CRF</label>
    <summaryForeignKey>CE_Reimbursement_Expense__c.Education_Record__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>