fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Course_Material_Needed__c.field-meta.xml
<CustomField>
    <fullName>Course_Material_Needed__c</fullName>
    <label>Course Material Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>