fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <formula>Text(Program__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Type fx</label>
    <type>Text</type>
</CustomField>