fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/CreatedbyOppTRButton__c.field-meta.xml
<CustomField>
    <fullName>CreatedbyOppTRButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Opp TR Button</label>
    <type>Checkbox</type>
</CustomField>