fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/CreatedbyRole__c.field-meta.xml
<CustomField>
    <fullName>CreatedbyRole__c</fullName>
    <defaultValue>$UserRole.Name</defaultValue>
    <label>Created by Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>