fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/CSSEmail__c.field-meta.xml
<CustomField>
    <fullName>CSSEmail__c</fullName>
    <label>CSS Email</label>
    <type>Email</type>
</CustomField>