fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Current_HAC_CLABSI_Vetting__c.field-meta.xml
<CustomField>
    <fullName>Current_HAC_CLABSI_Vetting__c</fullName>
    <label>Current HAC: CLABSI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>