fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Date_of_Event_Start__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Event_Start__c</fullName>
    <label>Confirmed Start Date</label>
    <type>Date</type>
</CustomField>