fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Department_a__c.field-meta.xml
<CustomField>
    <fullName>Department_a__c</fullName>
    <label>Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Cath Lab</fullName>
            </value>
            <value>
                <fullName>Code Blue/Rapid Response</fullName>
            </value>
            <value>
                <fullName>Critical Care</fullName>
            </value>
            <value>
                <fullName>ED</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>Flight Team</fullName>
            </value>
            <value>
                <fullName>Internal Medicine/Family Medicine</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>IV Therapy</fullName>
            </value>
            <value>
                <fullName>Med/Surg</fullName>
            </value>
            <value>
                <fullName>NICU</fullName>
            </value>
            <value>
                <fullName>OB/L&amp;D</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>OR/Anesthesia</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Peds</fullName>
            </value>
            <value>
                <fullName>PICU</fullName>
            </value>
            <value>
                <fullName>Respiratory Therapy</fullName>
            </value>
            <value>
                <fullName>Telemetry</fullName>
            </value>
            <value>
                <fullName>Vascular Access Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>