fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Departure_after__c.field-meta.xml
<CustomField>
    <fullName>Departure_after__c</fullName>
    <inlineHelpText>What is the earliest Date/Time that the Clinical Contractor can depart the event</inlineHelpText>
    <label>Departure after Date/Time</label>
    <type>DateTime</type>
</CustomField>