fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time__c</fullName>
    <inlineHelpText>Enter Departure Date and Preferred Time</inlineHelpText>
    <label>Departure Date/Time</label>
    <type>DateTime</type>
</CustomField>