fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Education_Records4</relationshipName>
    <type>Lookup</type>
</CustomField>