fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/DLX_TFXA_and_Assessment_completed__c.field-meta.xml
<CustomField>
    <fullName>DLX_TFXA_and_Assessment_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check box and attach TFXA &amp; Super User training assessment.</inlineHelpText>
    <label>DLX TFXA and Assessment completed</label>
    <type>Checkbox</type>
</CustomField>