fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Education_Type__c.field-meta.xml
<CustomField>
    <fullName>Education_Type__c</fullName>
    <label>Education Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cadaver Lab (Local)</fullName>
            </value>
            <value>
                <fullName>Cadaver Lab (Military)</fullName>
            </value>
            <value>
                <fullName>Cadaver Lab (National)</fullName>
            </value>
            <value>
                <fullName>Cadaver Lab (Regional)</fullName>
            </value>
            <value>
                <fullName>Speaking Engagement</fullName>
            </value>
            <value>
                <fullName>Conference/Booth</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Cadaver Lab (Other)</fullName>
            </value>
            <value>
                <fullName>Humanitarian</fullName>
            </value>
            <value>
                <fullName>Inservice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>