fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time txt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>