fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>Ending_Date__c</fullName>
    <label>Confirmed End Date</label>
    <type>Date</type>
</CustomField>