fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Estimated_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Billable_Hours__c</fullName>
    <label>Estimated Billable Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>