fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Event_Length__c.field-meta.xml
<CustomField>
    <fullName>Event_Length__c</fullName>
    <formula>if(ISBLANK( Ending_Date__c ),1,((Ending_Date__c) - (Date_of_Event_Start__c))+1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>