fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Executed_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Executed_Agreement__c</fullName>
    <label>Executed Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>