fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Existing_Account_GPO__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account_GPO__c</fullName>
    <formula>TEXT( Account_Facility__r.Main_GPO__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account GPO</label>
    <type>Text</type>
</CustomField>