fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Expected_Attendee_Group_Vetting__c.field-meta.xml
<CustomField>
    <fullName>Expected_Attendee_Group_Vetting__c</fullName>
    <inlineHelpText>Physicians, PA’s, APN’s, RN’s, RT’s, Residents, Paramedics/EMT’s, Hospital Wide, Other</inlineHelpText>
    <label>Expected Attendee Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>