fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/EZ_IO_TP_Range_AA__c.field-meta.xml
<CustomField>
    <fullName>EZ_IO_TP_Range_AA__c</fullName>
    <label>EZ-IO TP Range A+</label>
    <length>15</length>
    <type>Text</type>
</CustomField>