fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Facility_Event_Total__c.field-meta.xml
<CustomField>
    <fullName>Facility_Event_Total__c</fullName>
    <formula>AEM_Facility_Event__c + IA_Facility_Event__c + PM_Facility_Event__c + SU_Facility_Event__c  + VA_Facility_Event__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility/Event Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>