fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Facility_Policy_Specifics__c.field-meta.xml
<CustomField>
    <fullName>Facility_Policy_Specifics__c</fullName>
    <description>Facility policy specifics regarding procedures:</description>
    <label>Facility Policy Specifics</label>
    <type>TextArea</type>
</CustomField>