fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/First_City__c.field-meta.xml
<CustomField>
    <fullName>First_City__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>