fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Full_Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Full_Event_Code__c</fullName>
    <inlineHelpText>This should be shown when there is a code generated for the full event.</inlineHelpText>
    <label>Full Event Code</label>
    <type>TextArea</type>
</CustomField>