fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/GoalsforTraining__c.field-meta.xml
<CustomField>
    <fullName>GoalsforTraining__c</fullName>
    <label>Goals for Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process Improvement</fullName>
            </value>
            <value>
                <fullName>Advancing Practice</fullName>
            </value>
            <value>
                <fullName>Partnering to improve patient outcomes</fullName>
            </value>
            <value>
                <fullName>Standardize procedural practice</fullName>
            </value>
            <value>
                <fullName>Enhance clinical confidence</fullName>
            </value>
            <value>
                <fullName>Change in policy</fullName>
            </value>
            <value>
                <fullName>Restrictive policy</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Technical Skill Development</fullName>
            </value>
            <value>
                <fullName>Improve patient safety</fullName>
            </value>
            <value>
                <fullName>Product standardization</fullName>
            </value>
            <value>
                <fullName>Decrease procedural risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>