fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>CE_Total_Espenses__c +  Facility_Event_Total__c  + Sponsorship__c + A_V__c +  Tissue_Total__c  + Meals_Group__c + Transportation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>