fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Grand_Total_Meals__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Meals__c</fullName>
    <formula>CE_Meals__c  + Meals_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total Meals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>