fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Grand_Total_Travel__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Travel__c</fullName>
    <formula>Transportation__c + CE_Travel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total Travel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>