fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/HAC_CLABSI_Date__c.field-meta.xml
<CustomField>
    <fullName>HAC_CLABSI_Date__c</fullName>
    <label>HAC: CLABSI Date</label>
    <type>Date</type>
</CustomField>