fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/HiddenContactEmailField__c.field-meta.xml
<CustomField>
    <fullName>HiddenContactEmailField__c</fullName>
    <description>Necessary for email field to be exposed for email notification</description>
    <label>Hidden Contact Email Field</label>
    <type>Email</type>
</CustomField>