fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Hotel_Requested__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Requested__c</fullName>
    <label>Hotel Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>