fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/How_did_the_training_go__c.field-meta.xml
<CustomField>
    <fullName>How_did_the_training_go__c</fullName>
    <label>How did the training go?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 -- Poor (not engaged)</fullName>
            </value>
            <value>
                <fullName>2 -- Average</fullName>
            </value>
            <value>
                <fullName>3 -- Good (very engaged)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>