fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/How_did_the_training_go_Explain__c.field-meta.xml
<CustomField>
    <fullName>How_did_the_training_go_Explain__c</fullName>
    <label>How did the training go?  Explain</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>