fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/How_Many_Codes_Do_You_Need__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Codes_Do_You_Need__c</fullName>
    <inlineHelpText>This should be the number of codes you are requesting.  Full Event Codes must show 1.</inlineHelpText>
    <label>How Many Codes Do You Need?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Registration_Code_if_needed__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>