fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/IA_Facility_Event__c.field-meta.xml
<CustomField>
    <fullName>IA_Facility_Event__c</fullName>
    <label>IA Facility/Event</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>