fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/IA_Tissue__c.field-meta.xml
<CustomField>
    <fullName>IA_Tissue__c</fullName>
    <label>IA Tissue</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>