fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/IACurrentlyonContract1__c.field-meta.xml
<CustomField>
    <fullName>IACurrentlyonContract1__c</fullName>
    <label>Currently on Contract 1?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>