fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/IAWhatServicesSpecifically1__c.field-meta.xml
<CustomField>
    <fullName>IAWhatServicesSpecifically1__c</fullName>
    <label>What Services Specifically 1?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>