fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/IAWhatServicesSpecifically2__c.field-meta.xml
<CustomField>
    <fullName>IAWhatServicesSpecifically2__c</fullName>
    <label>What Services Specifically 2?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>