fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/IAWhy_do_we_need_these_services__c.field-meta.xml
<CustomField>
    <fullName>IAWhy_do_we_need_these_services__c</fullName>
    <inlineHelpText>What educational gap is being filled?</inlineHelpText>
    <label>Why do we need these services?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>