fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/IAWhydoweneedaContractor2__c.field-meta.xml
<CustomField>
    <fullName>IAWhydoweneedaContractor2__c</fullName>
    <label>Why do we need a Contractor 2?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>