fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/If_Registration_code_needed_How_Many__c.field-meta.xml
<CustomField>
    <fullName>If_Registration_code_needed_How_Many__c</fullName>
    <description>This is to support TFX Academy new process. Live Education Records and Strategic Marketing.</description>
    <inlineHelpText>Are registration codes needed? If so how many?</inlineHelpText>
    <label>Are reg. codes needed? If so how many?</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>