fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Inserter1__c.field-meta.xml
<CustomField>
    <fullName>Inserter1__c</fullName>
    <label>Inserter 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mid-levels</fullName>
            </value>
            <value>
                <fullName>RT</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>Medical Doctor</fullName>
            </value>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>