fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/InserterType__c.field-meta.xml
<CustomField>
    <fullName>InserterType__c</fullName>
    <label>Inserter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Novice</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>