fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Inservice__c.field-meta.xml
<CustomField>
    <fullName>Inservice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case 00009573</description>
    <inlineHelpText>Check if this was an Inservice.</inlineHelpText>
    <label>Inservice</label>
    <type>Checkbox</type>
</CustomField>