fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/IOpotentialTPRange__c.field-meta.xml
<CustomField>
    <fullName>IOpotentialTPRange__c</fullName>
    <label>IO potential TP Range</label>
    <length>5</length>
    <type>Text</type>
</CustomField>