fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Is_Teleflex_to_Provide_a_Meal__c.field-meta.xml
<CustomField>
    <fullName>Is_Teleflex_to_Provide_a_Meal__c</fullName>
    <inlineHelpText>Sales/Marketing is responsible for coordinating all meals.</inlineHelpText>
    <label>Will Teleflex Provide a Meal?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>