fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Last_Policy_Revision_Date_Vetting__c.field-meta.xml
<CustomField>
    <fullName>Last_Policy_Revision_Date_Vetting__c</fullName>
    <label>Last Policy Revision Date</label>
    <type>Date</type>
</CustomField>