fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Last_session_start_time__c.field-meta.xml
<CustomField>
    <fullName>Last_session_start_time__c</fullName>
    <label>Last session start time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>