fullSandbox11072023/force-app/main/default/objects/Education_Record__c/fields/Legacy_Confirmed_Educator_Check__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Confirmed_Educator_Check__c</fullName>
    <formula>NOT(ISNULL(Program_Type__c))  = FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Confirmed Educator Check</label>
    <type>Checkbox</type>
</CustomField>